<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- player -->
    <string name="play_text">\u25BA</string>
    <string name="stop_text">\u25A0</string>

    <string name="empty_stream_text"></string>
    <string name="buffering">buffering</string>
    <string name="error">error</string>
    <string name="connecting">connecting</string>
    <string name="playing">playing</string>
    <string name="stopped">stopped</string>

    <!-- starred list -->
    <string name="starred_list_separator">\u2605</string>
    <string name="more_channels">More channels...</string>

    <!-- channel list -->
    <string name="starred">\u2605</string>
    <string name="not_starred">\u2606</string>
    <string name="edit">\u270E</string>

    <string name="add_channel_text">Add Channel...</string>

    <!-- channel edit -->
    <string name="channel_edit_name_label">Name</string>
    <string name="channel_edit_url_label">URL</string>
    <string name="try_play">Try to play</string>
    <string name="remove_channel">Remove...</string>

    <!-- general -->
    <string name="ok">Ok</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>

    <!-- alarm notification -->
    <string name="kelloradio_alarm">Kelloradio.net alarm</string>
    <string name="time_until_next_alarm">Time until next alarm</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="alarm_removed">Alarm removed</string>

    <!-- settings -->
    <string name="settings">Settings</string>

    <string name="pref_audio_stream_type">Playback Type</string>
    <string name="pref_audio_stream_type_summ">Audio can be started as an alarm or as media playback.</string>
    <string-array name="pref_audio_stream_type_entries">
      <item>Alarm</item>
      <item>Media</item>
    </string-array>
    <string-array name="pref_audio_stream_type_values">
      <item>4</item>
      <item>3</item>
    </string-array>
    <string name="pref_audio_stream_type_default">4</string>

    <!-- test channels -->
    <string name="stock_ch_0_name">Test 1</string>
    <string name="stock_ch_0_url"></string>
    <string name="stock_ch_1_name">Test 2</string>
    <string name="stock_ch_1_url"></string>
    <string name="stock_ch_2_name">Test 3</string>
    <string name="stock_ch_2_url"></string>
    <string name="stock_ch_3_name">Test 4</string>
    <string name="stock_ch_3_url"></string>
    <string name="stock_ch_4_name">Test 5</string>
    <string name="stock_ch_4_url"></string>
    <string name="stock_ch_5_name">Test 6</string>
    <string name="stock_ch_5_url"></string>
</resources>
