<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/main_group"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

  <LinearLayout android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

    <!-- debug -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" >

      <TextView android:id="@+id/debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="11sp" />

    </LinearLayout>

    <!-- player -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal" >

      <Button android:id="@+id/play"
              android:focusable="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/stop_text"
              android:textSize="32sp" />

      <LinearLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

        <TextView android:id="@+id/stream"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/empty_stream_text"
                  android:textSize="24sp" />

        <TextView android:id="@+id/status"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/stopped"
                  android:textSize="16sp" />

      </LinearLayout>

    </LinearLayout>

    <!-- starred list -->
    <ScrollView android:id="@+id/main_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" >

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

        <net.kelloradio.app.FlowLayout android:id="@+id/channels"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content" />

        <!-- clock -->
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal" >

          <Button android:id="@+id/set_alarm_time_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="\u23F0"
                  android:textSize="32sp"
                  android:onClick="onSetAlarm" />

          <TextView android:id="@+id/alarm_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:textSize="32sp" />

        </LinearLayout>

      </LinearLayout>
    </ScrollView>

    <!-- channel list -->
    <ScrollView android:id="@+id/channel_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

        <LinearLayout android:id="@+id/channel_list"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical" />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal" >

          <Button android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/back"
                  android:onClick="onBack" />

          <Button android:id="@+id/add_channel_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/add_channel_text"
                  android:onClick="onAddChannel" />
        </LinearLayout>
      </LinearLayout>
    </ScrollView>

    <!-- edit channel -->
    <ScrollView android:id="@+id/channel_edit_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

      <LinearLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/channel_edit_name_label" />

        <EditText android:id="@+id/channel_edit_name_input"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text" />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/channel_edit_url_label" />

        <EditText android:id="@+id/channel_edit_url_input"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="text" />

        <Button android:id="@+id/channel_edit_try_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_play" />

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal" >
          <Button android:id="@+id/channel_edit_cancel_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel" />

          <Button android:id="@+id/channel_edit_remove_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/remove_channel" />

          <Button android:id="@+id/channel_edit_ok_button"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/ok" />
        </LinearLayout>
      </LinearLayout>
    </ScrollView>
  </LinearLayout>

  <!-- set alarm -->
  <ScrollView android:id="@+id/set_alarm_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="gone">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical" >

      <LinearLayout android:id="@+id/alarm_time_picker_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
      </LinearLayout>

      <LinearLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="onSetAlarmCancel"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:onClick="onRemoveAlarm"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="onSetAlarmOk"/>

      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</FrameLayout>
